<resources>
    <string name="app_name">Task2Do</string>

    <!--login-->
    <string name="login">Login</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password</string>

<!--signup-->
    <string name="create_account">Create account</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="next_btn">Next</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>

    <!--add task-->
    <string name="add_task">Add task</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_comments">Enter comments</string>
    <string name="schedule_timer">Schedule a timer</string>
    <string name="save_button">Save task</string>
    <string name="back">back</string>

    <!--update task-->
    <string name="update_task">Update task</string>
    <string name="add_comments">Add comments</string>
    <string name="title">Title</string>
    <string name="completed">completed</string>

    <!--task list-->
    <string name="lets_add_task">Lets add some task.</string>

// <!--task list-->
    <string name="lets_finish_task">Lets finish tasks.</string>


    create_account


</resources>