<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:padding="30dp"
android:transitionName="transition_login"
tools:context=".ui.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/enter_phone_number"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/field_phone_number_icon"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />


        </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_email_address"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_password_icon"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:id="@+id/forget_password_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password"
                    android:layout_marginTop="10dp">


                    <CheckBox
                        android:id="@+id/remember_me"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:buttonTint="@color/black"
                        android:text="@string/remember_me"
                        android:textColor="@color/black" />


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:background="#00000000"
                        android:visibility="gone"
                        android:text="@string/forget_password" />


                </RelativeLayout>


                    <Button
                        android:id="@+id/loggin_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/forget_password_block"
                        android:layout_marginTop="20dp"
                        android:background="@color/purple_700"
                        android:text="@string/login"
                        android:textColor="@color/white" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/loggin_button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/white"
                        android:text="Create Account"
                        android:textColor="@color/purple_700"/>


                    <RelativeLayout
                        android:id="@+id/login_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:elevation="8dp"
                        android:padding="20dp"
                        android:visibility="gone">


                        <ProgressBar
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true" />


                    </RelativeLayout>


    </RelativeLayout>


</LinearLayout>


</ScrollView>

