<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data/>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddTaskFragment">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="30dp"
            android:transitionName="transition_signup">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">
                    <TextView
                        android:id="@+id/update_task_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="sans-serif"
                        android:visibility="visible"
                        android:text="@string/update_task"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="35sp"
                        android:transitionName="transition_title_text" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/update_task_title"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:hintTextColor="@color/black"
                        app:startIconDrawable="@drawable/field_full_name_icon"
                        app:startIconTint="@color/black">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/update_task_title_ed"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null" />


                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/update_task_comment"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_comments"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:hintTextColor="@color/black"
                        app:startIconDrawable="@drawable/task_comment_icon"
                        app:startIconTint="@color/black">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/update_task_comment_ed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:inputType="textMultiLine"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/update_task_timer"
                        android:visibility="gone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/schedule_timer"
                        android:textColorHint="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:startIconDrawable="@drawable/task_timer_icon"
                        app:startIconTint="@color/black">


                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/update_task_timer_ed"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif"
                            android:editable="false"
                            android:inputType="datetime"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@null" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/update_timer_button"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:icon="@drawable/task_timer_icon"
                        android:hint="@string/schedule_timer"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        />

                </LinearLayout>


                <Button
                    android:id="@+id/save_task_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@color/black"
                    android:elevation="5dp"
                    android:text="@string/update_task"
                    android:textColor="@color/white"
                    android:transitionName="transition_next_btn" />


                <TextView
                    android:id="@+id/back_to_task_list_button"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:elevation="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/back"
                    android:textColor="@color/purple_700"
                    android:transitionName="transition_login_btn" />


            </LinearLayout>


        </ScrollView>

    </FrameLayout>
</layout>